projects/raaga/gateway/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: raaga-dev
  labels:
    app: gateway
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  raaga-gateway-dev.coherent.in
      secretName: gateway-tls
  rules:
  - host: "raaga-gateway-dev.coherent.in"
    http:
      paths:
        - path: /auth-service(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-svc
              port:
                number: 8091
        - path: /demo-service(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: demo-svc
              port:
                number: 8093
        - path: /sales-service(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: sales-svc
              port:
                number: 8092
